<resources>
    <string name="app_name">Babilone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Home fragment-->
    <string name="babilone">Babilone</string>
    <string name="market">Market</string>
    <string name="social">Social</string>
    <string name="crypto">Crypto</string>
    <string name="business">Business</string>
    <string name="love">Love</string>
    <string name="top_100">Top 100</string>
    <string name="journal">Journal</string>
    <string name="top_10">Top 10</string>
    <string name="rmb">RMB</string>
    <string name="money">Money</string>
    <string name="studies">Studies</string>
    <string name="vpn">VPN</string>
    <string name="title_search">Search</string>
    <string name="title_notification">Notification</string>
    <string name="market_home2">Market</string>
    <string name="lbl21">Категории</string>
    <string name="lbl_4_5">4.5</string>
    <string name="lbl_200">(200)</string>
    <string name="lbl29">Разные услуги</string>
    <string name="lbl_crystal">Crystal</string>

    <string name="msg_victoria_gmai_com">victoria@gmai.com</string>
    <string name="lbl67">Оплатить услуги</string>
    <string name="EditText">Настройка уведомлений</string>
    <string name="msg40">Настройка конфиденциальности\n</string>
    <string name="lbl68">Темная тема</string>
    <string name="Goout">Выйти</string>

</resources>