<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearUserprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_bg_gray_100_02"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageUserImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_vertical"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_rectangle_11" />

        <LinearLayout
            android:id="@+id/linearColumntitletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitleText"
                style="@style/txtIntersemibold16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@{userprofile1RowModel.txtTitleText}"
                android:textColor="@color/black"
                tools:text="@string/lbl_crystal" />

            <TextView
                android:id="@+id/txtCompanyText"
                style="@style/txtIntermedium13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@{userprofile1RowModel.txtCompanyText}"
                android:textColor="@color/black"
                tools:text="Клининговая компания" />

            <LinearLayout
                android:id="@+id/linearRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageRatingImage"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_gravity="top"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_star_1_3"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_star_1_3" />

                <TextView
                    android:id="@+id/txtRatingText"
                    style="@style/txtIntermedium14_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{userprofile1RowModel.txtRatingText}"
                    android:textColor="@color/black"
                    tools:text="@string/lbl_4_5" />

                <TextView
                    android:id="@+id/txtReviewCountText"
                    style="@style/txtIntermedium14_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{userprofile1RowModel.txtReviewCountText}"
                    android:textColor="@color/black"
                    tools:text="@string/lbl_200" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageAdditionalImage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="top"
            android:layout_marginStart="130dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="56dp"
            android:scaleType="fitXY"
            android:src="@drawable/img_iconsax_gray_500_01_24x24"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_iconsax_gray_500_01_24x24" />
    </LinearLayout>

</RelativeLayout>